fixing jumping?

--- a/css/custom.css
+++ b/css/custom.css
@@ -60,6 +60,7 @@ div#headerpicturewrap
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%; 
+	height: 621px; 
 	z-index: 0; 
 	text-align: center;
 }
